@@ -51,6 +51,7 @@ Verilator 5.041 devel
 * Fix internal error on out-of-bounds real array access.
 * Fix pre/post increments in assertions (#6434).
 * Fix elaboration displays with `%m` (#6445). [Alex Solomatnikov]
+* Fix false unique assertions on `else ;` (#6450). [Don Owen]
 
 
 Verilator 5.040 2025-08-30
